examples/test/testpolicy17287.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17287
  namespace: namespace122
spec:
  podSelector:
    matchLabels:
      key22: value40
      key49: value17
      key30: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value9
          key6: value44
          key20: value19
      podSelector:
        matchLabels:
          key31: value31
